examples/certificates/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-sample-1                                # The name of the ingress certificate object   
  namespace: cview-issuer                            # The name of the namespace where to cretae the ingress object 
  annotations:
    cert-manager.io/issuer: "cviewissuer-1-year"     # The name of specific cview-issuer or cluster issuer 
    cert-manager.io/issuer-kind: "CViewIssuer"       # required , do not modify 
    cert-manager.io/issuer-group: "secure-ly.com"    # required , do not modify 
    cert-manager.io/revision-history-limit: "5"      # number of certificate request history 

    # Subject fileds annotation 
    cert-manager.io/common-name: ""                  # Common name should be added. (required)  
    cert-manager.io/subject-organizations: ""        # Organization (optional)
    cert-manager.io/subject-organizationalunits: ""  # Organization unit (optional)
    cert-manager.io/subject-countries: ""            # county as 2 char  (optional)
    cert-manager.io/subject-provinces: ""            # State (optional)
    cert-manager.io/subject-localities: ""           # City (optional)

    # Subject alternative names 
    cert-manager.io/email-sans: ""                   # SAN, rfc822 email Addresses. (optional). Supports comma-separated values e.g. "me@example.com,you@example.com"
    
    # --------------------------------------------------------------------------------------
    # Anotation a business logic information to be added to the certificate (used in CView) 
    # --------------------------------------------------------------------------------------
    cview-issuer/customField1: ""             # custome filed 1 , based on C-View definition
    cview-issuer/customField2: ""
    cview-issuer/customField3: ""
    cview-issuer/customField4: ""
    cview-issuer/customField5: ""
    cview-issuer/customField6: ""
    cview-issuer/customField7: ""
    cview-issuer/customField8: ""
    cview-issuer/customField9: ""
    cview-issuer/customField10: ""
    cview-issuer/customEmailAddress: ""       # set custom email address for a personal expiraiton alert 
    cview-issuer/certOwner: "LAB\\dror"       # set the certificate owner as domain\\user
    
spec:
  tls:
  - hosts:
    - cv.securely.apps-crc.testing            # Application host name ( added as DNS names ) 
    secretName: cert-sample-1                 # The name of the certificate secret (required and unique)
  rules:
    - host: cv.securely.apps-crc.testing      # Application host name (required). Aded as DNS name  
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo1
                port:
                  number: 80
