examples/certificates/routs-sample.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: it5-route                                      # The name of the openshift-rout object   
  namespace: cview-issuer                              # The name of the namespace where to cretae the openshift-rout 
  annotations:
    cert-manager.io/issuer-name: "cviewissuer-1-year"  # The name of specific cview-issuer or cluster issuer ( required)
    cert-manager.io/issuer-group: "secure-ly.com"      # required , do not modify
    cert-manager.io/issuer-kind: "CViewIssuer"         # required , do not modify
    
    #cert-manager.io/duration: 1h                      # Optional, defaults to 90 days
    cert-manager.io/renew-before: 240h                 # Renew certificate X hours before expired ( default value is 240 hours [10 days]) 
    cert-manager.io/revision-history-limit: "5"         # number of certificate request history

    # --------------------------------------------------------------------------------------
    # Subject fileds annotation 
    # --------------------------------------------------------------------------------------
    cert-manager.io/common-name: ""                    # Common name should be added. (required)  
    cert-manager.io/subject-organizations: ""          # Organization (optional)
    cert-manager.io/subject-organizationalunits: ""    # Organization unit (optional)
    cert-manager.io/subject-countries: ""              # county as 2 char  (optional)
    cert-manager.io/subject-provinces: ""              # State (optional)
    cert-manager.io/subject-localities: ""             # City (optional)

    # --------------------------------------------------------------------------------------
    # Subject alternative names
    # --------------------------------------------------------------------------------------
    cert-manager.io/alt-names: ""                      # DNS names (optional). Supports comma-separated values. 
    cert-manager.io/email-sans: ""                     # RFC822 email Addresses. (optional). Supports comma-separated values e.g. "me@example.com,you@example.com"
    cert-manager.io/ip-sans: ""                        # IP Address (optional). Supports comma-separated values e.g ( "10.20.30.40,192.168.192.168")
    
    # --------------------------------------------------------------------------------------
    # Anotation a business logic information to be added to the certificate (used in CView) 
    # --------------------------------------------------------------------------------------
    cview-issuer/customField1: ""             # custome filed 1 , based on C-View definition
    cview-issuer/customField2: ""
    cview-issuer/customField3: ""
    cview-issuer/customField4: ""
    cview-issuer/customField5: ""
    cview-issuer/customField6: ""
    cview-issuer/customField7: ""
    cview-issuer/customField8: ""
    cview-issuer/customField9: ""
    cview-issuer/customField10: ""
    cview-issuer/customEmailAddress: ""       # set custom email address for a personal expiraiton alert 
    cview-issuer/certOwner: ""                # set the certificate owner as domain\\user

spec:
  host: "it5.securely.com"         # Application host name (required) this vlaue is added as additioanl DNS name 
  port:
    targetPort: 443
  to:
    kind: Service
    name: hello2-openshift
